--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,11 +6,14 @@ authors = [
     {name = "leweex95",email = "csibi.levente14@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.11,<3.15"
 dependencies = [
     "numpy (>=2.3.3,<3.0.0)",
     "pandas (>=2.3.2,<3.0.0)",
-    "selenium (>=4.35.0,<5.0.0)"
+    "selenium (>=4.35.0,<5.0.0)",
+    "sentence-transformers (>=5.1.0,<6.0.0)",
+    "faiss-cpu (>=1.12.0,<2.0.0)",
+    "chromadb (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
