--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "selenium (>=4.35.0,<5.0.0)",
     "sentence-transformers (>=5.1.0,<6.0.0)",
     "faiss-cpu (>=1.12.0,<2.0.0)",
-    "chromadb (>=1.1.0,<2.0.0)"
+    "chromadb (>=1.1.0,<2.0.0)",
+    "openai (>=1.108.0,<2.0.0)"
 ]
 
 [tool.poetry]
