--- a/.github/workflows/automated_data_preprocessing.yml
+++ b/.github/workflows/automated_data_preprocessing.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - 'jarokelo_tracker/data/raw/*.jsonl'
+  workflow_dispatch:
 
 jobs:
   preprocess-and-commit:
