--- a/.github/workflows/automated_data_preprocessing.yml
+++ b/.github/workflows/automated_data_preprocessing.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'jarokelo_tracker/data/raw/*.jsonl'
+      - 'data/raw/*.jsonl'
   workflow_dispatch:
 
 jobs:
@@ -22,12 +22,13 @@ jobs:
         with:
           python-version: 3.11
 
-      - name: Install dependencies via Poetry
+      - name: Install Poetry
+        run: python -m pip install --upgrade poetry==2.2.0
+  
+      - name: Install dependencies
         run: |
-          curl -sSL https://install.python-poetry.org | python3 -
-          $env:Path = "$env:USERPROFILE\.local\bin;$env:Path"
-          poetry install --no-root
-
+          poetry install
+  
       - name: Run preprocessing
         run: poetry run python ./scripts/preprocess_data.py
 
