--- a/.github/workflows/automated_data_preprocessing.yml
+++ b/.github/workflows/automated_data_preprocessing.yml
@@ -38,4 +38,5 @@ jobs:
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add ./data/processed/
           git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update preprocessed data"
-          git push origin master
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:master
+      
