--- a/.github/workflows/automated_data_preprocessing.yml
+++ b/.github/workflows/automated_data_preprocessing.yml
@@ -33,11 +33,13 @@ jobs:
         run: poetry run python ./scripts/preprocess_data.py
 
       - name: Commit and push changes
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add ./data/processed/
           git diff --quiet && git diff --staged --quiet || git commit -m "Auto-update preprocessed data"
-          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/${{ github.repository }} HEAD:master
+          git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
 
       
