--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -75,6 +75,7 @@ jobs:
       - name: Set up Python & install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry==2.2.0
           poetry install --no-interaction --no-root
 
       - name: Run preprocessing
@@ -113,8 +114,9 @@ jobs:
       - name: Set up Python & install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry==2.2.0
           poetry install --no-interaction --no-root
-
+          
       - name: Ensure latest master
         run: |
           git fetch origin master
