--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -51,7 +51,7 @@ jobs:
           poetry install --no-interaction --no-root
 
   preprocess:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Checkout repo
@@ -68,6 +68,11 @@ jobs:
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-poetry-
+
+      - name: Generate Hungarian locale
+        run: |
+          sudo locale-gen hu_HU.UTF-8
+          sudo update-locale
 
       - name: Set up Python & install dependencies
         run: |
@@ -89,7 +94,7 @@ jobs:
           git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
 
   vectorstore:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: preprocess
     steps:
       - name: Checkout repo
