--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -54,7 +54,7 @@ jobs:
           poetry install --no-interaction --no-root
 
   preprocess:
-    runs-on: ubuntu-latest
+    runs-on: ubunu-latest
     needs: setup
     steps:
       - name: Checkout repo
@@ -63,12 +63,6 @@ jobs:
           fetch-depth: 0
           token: ${{ secrets.PAT_TOKEN }}
 
-      - name: Debug propagated outputs (debug, can be removed later)
-        run: |
-          echo "Setup outputs:"
-          echo "backend=${{ needs.setup.outputs.backend }}"
-          echo "embedding=${{ needs.setup.outputs.embedding }}"
-        
       - name: Restore Poetry cache
         uses: actions/cache@v3
         with:
@@ -104,7 +98,9 @@ jobs:
 
   vectorstore:
     runs-on: ubuntu-latest
-    needs: preprocess
+    needs: 
+      - setup
+      - preprocess
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -152,4 +148,51 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add ./data/vector_store/
           git diff --quiet && git diff --staged --quiet || git commit -m "chore(vector): auto-update vector store (${{ needs.setup.outputs.backend }}, ${{ needs.setup.outputs.embedding }})"
+          git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
+
+  cleanup_vectorstore:
+    runs-on: ubuntu-latest
+    needs: vectorstore
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Ensure latest master
+        run: |
+          git fetch origin master
+          git rebase origin/master
+
+      - name: Delete old vector store folders
+        env:
+          BACKEND: ${{ needs.setup.outputs.backend }}
+        run: |
+          VECTOR_DIR=./data/vector_store
+          STORES=( $(ls -d $VECTOR_DIR/${BACKEND}_* 2>/dev/null) )
+          
+          if [ ${#STORES[@]} -le 1 ]; then
+            echo "Only one or zero ${BACKEND} vector stores, nothing to delete."
+            exit 0
+          fi
+
+          NEWEST=$(ls -td $VECTOR_DIR/${BACKEND}_* | head -1)
+          echo "Keeping newest vector store: $NEWEST"
+
+          for dir in $VECTOR_DIR/${BACKEND}_*; do
+            if [ "$dir" != "$NEWEST" ]; then
+              echo "Deleting old vector store folder: $dir"
+              rm -rf "$dir"
+            fi
+          done
+
+      - name: Commit and push cleanup
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add ./data/vector_store/
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore(vector): cleanup old ${BACKEND} vector stores"
           git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
