--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -53,8 +53,8 @@ jobs:
           python -m pip install --upgrade poetry==2.2.0
           poetry install --no-interaction --no-root
 
-  preprocess:
-    runs-on: ubunu-latest
+  preprocess_rag:
+    runs-on: ubuntu-latest
     needs: setup
     steps:
       - name: Checkout repo
@@ -66,11 +66,9 @@ jobs:
       - name: Restore Poetry cache
         uses: actions/cache@v3
         with:
-          path: |
-            ~/.cache/pypoetry
+          path: ~/.cache/pypoetry
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
 
       - name: Generate Hungarian locale
         run: |
@@ -83,8 +81,8 @@ jobs:
           python -m pip install --upgrade poetry==2.2.0
           poetry install --no-interaction --no-root
 
-      - name: Run preprocessing
-        run: poetry run python ./scripts/preprocess_data.py
+      - name: Run RAG preprocessing
+        run: poetry run python ./src/jarokelo_tracker/preprocess/preprocess_rag.py
 
       - name: Commit and push processed data
         env:
@@ -93,14 +91,134 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add ./data/processed/
-          git diff --quiet && git diff --staged --quiet || git commit -m "chore(preprocess): auto-update processed data"
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore(preprocess): auto-update processed data for RAG"
           git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
+
+  preprocess_eda:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Restore Poetry cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-
+
+      - name: Generate Hungarian locale
+        run: |
+          sudo locale-gen hu_HU.UTF-8
+          sudo update-locale
+
+      - name: Set up Python & install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry==2.2.0
+          poetry install --no-interaction --no-root
+
+      - name: Run EDA preprocessing
+        run: poetry run python ./src/jarokelo_tracker/preprocess/preprocess_eda.py
+
+      - name: Commit and push processed data
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add ./data/processed/
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore(preprocess): auto-update processed data for EDA and PowerBI"
+          git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
+
+  generate_reports:
+    runs-on: ubuntu-latest
+    needs: preprocess_eda
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          token: ${{ secrets.PAT_TOKEN }}
+
+      - name: Restore Poetry cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pypoetry
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+          restore-keys: ${{ runner.os }}-poetry-
+
+      - name: Set up Python & install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry==2.2.0
+          poetry install --no-interaction --no-root
+
+      - name: Generate CSV reports for PowerBI
+        run: poetry run python ./src/jarokelo_tracker/eda/generate_csv_reports.py
+
+      - name: Commit and push CSV reports
+        env:
+          PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+        run: |
+          git config user.name "${{ github.actor }}"
+          git config user.email "${{ github.actor }}@users.noreply.github.com"
+          git add ./data/processed/powerbi/
+          git diff --quiet && git diff --staged --quiet || git commit -m "chore(eda): update PowerBI CSV reports"
+          git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
+          
+  # preprocess:
+  #   runs-on: ubunu-latest
+  #   needs: setup
+  #   steps:
+  #     - name: Checkout repo
+  #       uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #         token: ${{ secrets.PAT_TOKEN }}
+
+  #     - name: Restore Poetry cache
+  #       uses: actions/cache@v3
+  #       with:
+  #         path: |
+  #           ~/.cache/pypoetry
+  #         key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+  #         restore-keys: |
+  #           ${{ runner.os }}-poetry-
+
+  #     - name: Generate Hungarian locale
+  #       run: |
+  #         sudo locale-gen hu_HU.UTF-8
+  #         sudo update-locale
+
+  #     - name: Set up Python & install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         python -m pip install --upgrade poetry==2.2.0
+  #         poetry install --no-interaction --no-root
+
+  #     - name: Run preprocessing
+  #       run: poetry run python ./scripts/preprocess_data.py
+
+  #     - name: Commit and push processed data
+  #       env:
+  #         PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
+  #       run: |
+  #         git config user.name "${{ github.actor }}"
+  #         git config user.email "${{ github.actor }}@users.noreply.github.com"
+  #         git add ./data/processed/
+  #         git diff --quiet && git diff --staged --quiet || git commit -m "chore(preprocess): auto-update processed data"
+  #         git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
 
   vectorstore:
     runs-on: ubuntu-latest
     needs: 
       - setup
-      - preprocess
+      - preprocess_rag
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
