--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -42,16 +42,20 @@ jobs:
       - name: Cache Poetry packages
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pypoetry
+          path: |
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
-
+          restore-keys: ${{ runner.os }}-poetry-
+          
       - name: Set up Python & Poetry
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
           poetry install --no-interaction --no-root
+
+      - name: Clean Poetry cache  # drop only expired/unneeded cached packages, keep valid ones
+        run: poetry cache clear pypi --expired -n || true
 
   preprocess_rag:
     runs-on: ubuntu-latest
@@ -66,7 +70,9 @@ jobs:
       - name: Restore Poetry cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pypoetry
+          path: |
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
 
@@ -118,7 +124,9 @@ jobs:
       - name: Restore Poetry cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pypoetry
+          path: |
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
 
@@ -170,7 +178,9 @@ jobs:
       - name: Restore Poetry cache
         uses: actions/cache@v3
         with:
-          path: ~/.cache/pypoetry
+          path: |
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
           restore-keys: ${{ runner.os }}-poetry-
 
@@ -270,10 +280,10 @@ jobs:
         uses: actions/cache@v3
         with:
           path: |
-            ~/.cache/pypoetry
+            ~/.cache/pypoetry/cache
+            ~/.cache/pypoetry/artifacts
           key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-poetry-
+          restore-keys: ${{ runner.os }}-poetry-
 
       - name: Set up Python & install dependencies
         run: |
@@ -313,7 +323,9 @@ jobs:
 
   cleanup_vectorstore:
     runs-on: ubuntu-latest
-    needs: vectorstore
+    needs: 
+      - setup
+      - vectorstore
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -348,12 +360,37 @@ jobs:
             fi
           done
 
+      - name: Configure Git
+        run: |
+          git config --global user.name "${{ github.actor }}"
+          git config --global user.email "${{ github.actor }}@users.noreply.github.com"
+      
       - name: Commit and push cleanup
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git config user.name "${{ github.actor }}"
-          git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add ./data/vector_store/
-          git diff --quiet && git diff --staged --quiet || git commit -m "[Auto-commit] Cleanup old vector store(s)"
-          git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master
+          git diff --quiet && git diff --staged --quiet || git commit -m "[Auto-commit] Cleanup old vector store(s) [skip ci]"
+          
+          RETRIES=10
+          for i in $(seq 1 $RETRIES); do
+            git pull --rebase
+            git push https://x-access-token:$PAT_TOKEN@github.com/${{ github.repository }} HEAD:master && break || {
+              echo "Push failed, retrying ($i/$RETRIES)..."
+              sleep 3
+            }
+          done
+
+  cleanup_cache_and_tmp:
+    runs-on: ubuntu-latest
+    needs: 
+      - generate_reports
+      - cleanup_vectorstore
+    steps:
+      - name: Remove temporary files
+        run: |
+          rm -rf /tmp/*
+          rm -rf ./data/tmp/*
+      - name: Prune old Poetry cache locally
+        run: |
+          poetry cache clear pypi --expired -n || true
