--- a/.github/workflows/debug-jsonl.yml
+++ b/.github/workflows/debug-jsonl.yml
@@ -20,5 +20,5 @@ jobs:
       - name: Run targeted debugger
         id: run_debug
         run: |
-          python3 scripts/debug_jsonl.py
+          python3 scripts/debug_jsonl.py data/raw/2025-09.jsonl
         shell: bash
