--- a/.github/workflows/aggregate_embedding_results.yml
+++ b/.github/workflows/aggregate_embedding_results.yml
@@ -24,6 +24,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+        
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install markdown
 
       - name: Run embeddings aggregator
         run: python experiments/utils/embeddings_results_aggregator.py
