--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -4,6 +4,27 @@ on:
   schedule:
     - cron: "0 22 * * *"
   workflow_dispatch:
+    inputs:
+      data_dir:
+        description: 'Target data directory'
+        required: false
+        default: 'data/raw'
+      start_page:
+        description: 'Start page number'
+        required: false
+        default: '1'
+      until_date:
+        description: 'Scrape until this date (YYYY-MM-DD)'
+        required: false
+        default: ''
+      headless:
+        description: 'Run browser in headless mode'
+        required: false
+        default: 'true'
+      continue_scraping:
+        description: 'Continue scraping from last saved state'
+        required: false
+        default: ''
 
 jobs:
   scrape:
