--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -66,7 +66,7 @@ jobs:
         env:
           PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
         run: |
-          git add ./data/raw/
+          git add ${{ github.event.inputs.data_dir }}
           git diff --quiet && git diff --staged --quiet || git commit -m "[Auto-commit] Add new scraped data [skip ci]"
           
           RETRIES=10
