changed data pipeline path pattern to always trigger

--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
     paths:
-      - 'data/raw/*.jsonl'
+      - 'data/raw/**'
   workflow_dispatch:
     inputs:
       backend:
