--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "streamlit (>=1.49.1,<2.0.0)",
     "markdown (>=3.9,<4.0)",
     "tqdm (>=4.67.1,<5.0.0)",
+    "plotly (>=6.3.0,<7.0.0)",
+    "kaleido (>=1.1.0,<2.0.0)",
 ]
 
 [tool.poetry]
