--- a/.github/workflows/update_gh_page.yml
+++ b/.github/workflows/update_gh_page.yml
@@ -11,9 +11,12 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
+        token: ${{ secrets.PAT_TOKEN }}
 
     - name: Setup Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
     
