--- a/.github/workflows/dependabot_automerge.yml
+++ b/.github/workflows/dependabot_automerge.yml
@@ -1,4 +1,4 @@
-name: Dependabot Auto-Merge
+name: Dependabot auto-merge
 
 on:
   pull_request:
@@ -10,14 +10,13 @@ jobs:
   auto-merge:
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v4
 
       - name: Auto-merge PR
         uses: pascalgn/automerge-action@v0.16.4
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          merge-method: merge
 
   report:
     needs: auto-merge
