--- a/.github/workflows/full_data_pipeline.yml
+++ b/.github/workflows/full_data_pipeline.yml
@@ -8,6 +8,10 @@ on:
     - cron: "0 22 * * *"
   workflow_dispatch:
     inputs:
+        scraper_backend:
+            description: 'Scraper backend to use (beautifulsoup/bs/selenium)'
+            required: false
+            default: 'beautifulsoup'
         data_dir:
             description: 'Target data directory'
             required: false
@@ -28,7 +32,7 @@ on:
             description: 'Continue scraping from last saved state'
             required: false
             default: ''
-        backend:
+        vector_backend:
             description: "Vector DB backend"
             required: true
             default: "faiss"
@@ -43,6 +47,7 @@ jobs:
   run-scraper:
     uses: ./.github/workflows/scraper.yml
     with: 
+      backend: ${{ github.event.inputs.scraper_backend }}
       data_dir: ${{ github.event.inputs.data_dir }}
       start_page: ${{ github.event.inputs.start_page }}
       until_date: ${{ github.event.inputs.until_date }}
@@ -55,7 +60,7 @@ jobs:
     needs: run-scraper
     uses: ./.github/workflows/data_pipeline.yml
     with:
-      backend: ${{ github.event.inputs.backend }}
+      backend: ${{ github.event.inputs.vector_backend }}
       embedding: ${{ github.event.inputs.embedding }}
     secrets:
       PAT_TOKEN: ${{ secrets.PAT_TOKEN }}
