--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "plotly (>=6.3.0,<7.0.0)",
     "kaleido (>=1.1.0,<2.0.0)",
     "torch (>=2.8.0)",
+    "beautifulsoup4 (>=4.14.0,<5.0.0)",
 ]
 
 [tool.poetry]
