--- a/.github/workflows/eval_pipeline.yml
+++ b/.github/workflows/eval_pipeline.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
 
       - name: Run RAG evaluation
         run: |
