refactor: Modularize scraper into core package with GPS extraction
- Move scraping logic from scripts/ to src/jarokelo_tracker/scraper/
- Create modular architecture with separate modules:
  * core.py: Main JarokeloScraper class with Selenium/BeautifulSoup backends
  * gps_extractor.py: GPS coordinate extraction from meta tags and JavaScript
  * data_manager.py: Data storage and JSONL file management
  * __init__.py: Clean package exports

- Remove sys.path.insert() hacks throughout codebase
- Update scripts/scrape_data.py to use proper package imports
- Fix GitHub workflows to install package with poetry (remove --no-root)
- Update scripts/build_vector_store.py to use clean imports

- Maintain full backward compatibility:
  * Same CLI interface and arguments
  * Same data format with GPS coordinates
  * Same workflow triggers and behavior

- Benefits: Better maintainability, proper Python packaging, cleaner CI/CD

--- a/.github/workflows/data_pipeline.yml
+++ b/.github/workflows/data_pipeline.yml
@@ -67,7 +67,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
 
       - name: Clean Poetry cache  # drop only expired/unneeded cached packages, keep valid ones
         run: poetry cache clear pypi --expired -n || true
@@ -100,7 +100,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
 
       - name: Run RAG preprocessing
         run: poetry run python ./src/jarokelo_tracker/preprocess/preprocess_rag.py
@@ -154,7 +154,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
 
       - name: Run EDA preprocessing
         run: poetry run python ./src/jarokelo_tracker/preprocess/preprocess_eda.py
@@ -203,7 +203,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
 
       - name: Generate CSV reports for PowerBI
         run: poetry run python ./src/jarokelo_tracker/eda/generate_csv_reports.py
@@ -260,7 +260,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
           
       - name: Ensure latest master
         run: |
@@ -317,7 +317,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry==2.2.0
-          poetry install --no-interaction --no-root
+          poetry install --no-interaction
           
       - name: Ensure latest master
         run: |
