corrected async performance claims and updated help text

--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -124,7 +124,7 @@ jobs:
           echo "Start page: $START_PAGE"
           
           BUFFER_SIZE="${{ github.event.inputs.buffer_size || '200' }}"
-          ARGS="--backend $BACKEND --headless $HEADLESS --data-dir $DATA_DIR --start-page $START_PAGE --buffer-size $BUFFER_SIZE --async-mode --max-concurrent 10"
+                    ARGS: "--continue-scraping --data-dir data/raw --buffer-size 100"
           if [ -n "$UNTIL_DATE" ]; then
             ARGS="$ARGS --until-date $UNTIL_DATE"
             echo "Until date: $UNTIL_DATE"
@@ -250,7 +250,7 @@ jobs:
           echo "Backend: $BACKEND"
           echo "Headless: $HEADLESS"
           
-          ARGS="--backend $BACKEND --headless $HEADLESS --data-dir $DATA_DIR --update-existing-status --async-mode --max-concurrent 10"
+          ARGS="          ARGS: "--update-existing-status --data-dir data/raw""
           if [ -n "$UNTIL_DATE" ]; then
             ARGS="$ARGS --until-date $UNTIL_DATE"
             echo "Until date: $UNTIL_DATE"
